Cabal-Version: 2.2
Name:           primitive
Version:        0.7.0.1
License:        BSD-3-Clause
License-File:   LICENSE

Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>
Maintainer:     libraries@haskell.org
Copyright:      (c) Roman Leshchinskiy 2009-2012
Homepage:       https://github.com/haskell/primitive
Bug-Reports:    https://github.com/haskell/primitive/issues
Category:       Data
Synopsis:       Primitive memory-related operations
Build-Type:     Simple
Description:    This package provides various primitive memory-related operations.

Extra-Source-Files: changelog.md
                    test/*.hs
                    test/LICENSE

Tested-With:
  GHC == 7.4.2,
  GHC == 7.6.3,
  GHC == 7.8.4,
  GHC == 7.10.3,
  GHC == 8.0.2,
  GHC == 8.2.2,
  GHC == 8.4.4,
  GHC == 8.6.5,
  GHC == 8.8.2,
  GHC == 8.10.1

Library
  Default-Language: Haskell2010
  Other-Extensions:
        BangPatterns, CPP, DeriveDataTypeable,
        MagicHash, TypeFamilies, UnboxedTuples, UnliftedFFITypes

  Exposed-Modules:
        Control.Monad.Primitive
        Data.Primitive
        Data.Primitive.MachDeps
        Data.Primitive.Types
        Data.Primitive.Array
        Data.Primitive.ByteArray
        Data.Primitive.PrimArray
        Data.Primitive.SmallArray
        Data.Primitive.Ptr
        Data.Primitive.MutVar
        Data.Primitive.MVar

  Other-Modules:
        Data.Primitive.Internal.Compat
        Data.Primitive.Internal.Operations

  Build-Depends: base >= 4.5 && < 4.15
               , ghc-prim >= 0.2 && < 0.7
               , transformers >= 0.2 && < 0.6
  if !impl(ghc >= 8.0)
    Build-Depends: fail == 4.9.*

  Ghc-Options: -O2

  Include-Dirs: cbits
  Install-Includes: primitive-memops.h
  includes: primitive-memops.h
  c-sources: cbits/primitive-memops.c
  if !os(solaris)
      cc-options: -ftree-vectorize
  if arch(i386) || arch(x86_64)
      cc-options: -msse2

test-suite test-qc
  Default-Language: Haskell2010
  hs-source-dirs: test
                  test/src
  main-is: main.hs
  Other-Modules:
        PrimLawsWIP
        Test.QuickCheck.Classes
        Test.QuickCheck.Classes.Alternative
        Test.QuickCheck.Classes.Applicative
        Test.QuickCheck.Classes.Common
        Test.QuickCheck.Classes.Compat
        Test.QuickCheck.Classes.Enum
        Test.QuickCheck.Classes.Eq
        Test.QuickCheck.Classes.Foldable
        Test.QuickCheck.Classes.Functor
        Test.QuickCheck.Classes.Generic
        Test.QuickCheck.Classes.Integral
        Test.QuickCheck.Classes.IsList
        Test.QuickCheck.Classes.Monad
        Test.QuickCheck.Classes.MonadPlus
        Test.QuickCheck.Classes.MonadZip
        Test.QuickCheck.Classes.Monoid
        Test.QuickCheck.Classes.Ord
        Test.QuickCheck.Classes.Semigroup
        Test.QuickCheck.Classes.Show
        Test.QuickCheck.Classes.ShowRead
        Test.QuickCheck.Classes.Storable
        Test.QuickCheck.Classes.Traversable
  type: exitcode-stdio-1.0
  build-depends: base
               , base-orphans
               , ghc-prim
               , primitive
               , QuickCheck ^>= 2.13
               , tasty ^>= 1.2
               , tasty-quickcheck
               , tagged
               , transformers >=0.4
               , transformers-compat
               , semigroups

  cpp-options:   -DHAVE_UNARY_LAWS
  ghc-options: -O2



source-repository head
  type:     git
  location: https://github.com/haskell/primitive
