Name:           primitive-benchmarks
Version:        0.1
License:        BSD3
License-File:   LICENSE

Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>
Maintainer:     libraries@haskell.org
Copyright:      (c) Roman Leshchinskiy 2009-2012
Homepage:       https://github.com/haskell/primitive
Bug-Reports:    https://github.com/haskell/primitive/issues
Category:       Data
Synopsis:       primitive benchmarks
Cabal-Version:  >= 1.10
Build-Type:     Simple
Description:    @primitive@ benchmarks

Tested-With:
  GHC == 7.4.2,
  GHC == 7.6.3,
  GHC == 7.8.4,
  GHC == 7.10.3,
  GHC == 8.0.2,
  GHC == 8.2.2,
  GHC == 8.4.4,
  GHC == 8.6.5,
  GHC == 8.8.2,
  GHC == 8.10.1

flag primitive-benchmarks
  default: True

benchmark bench
  if !flag(primitive-benchmarks)
    buildable: False

  Default-Language: Haskell2010
  hs-source-dirs: .
  main-is: main.hs
  type: exitcode-stdio-1.0
  ghc-options: -O2
  other-modules:
    Array.Traverse.Closure
    Array.Traverse.Unsafe
    ByteArray.Compare
    PrimArray.Compare
    PrimArray.Traverse
  build-depends:
      base >= 4.8 && < 4.15
    , primitive
    , deepseq
    , gauge
    , transformers >= 0.3

source-repository head
  type:     git
  location: https://github.com/haskell/primitive
  subdir:   bench
